--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </p>
       </div>
       <div class="email">
-        <p>leave a message in the</p>
+        <p>leave a message in the..</p>
         <h2 class="email-section">programmig.hero1@gmail.com</h2>
       </div>
     </section>
